<resources>
    <string name="app_name">heretohear</string>

    <string name="email">email address</string>
    <string name="hint_password">Password</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="crop_name">cropname</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="new_register_here">New? Register here</string>
    <string name="login">Login</string>
    <string name="coursename">course name</string>
    <string name="instructure">instructure name</string>
    <string name="btnhome">Add user</string>
    <string name="splash">splash</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="camera">camera</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mic">mic</string>
    <string name="sp2txt">speech to text</string>

    <string name="action_settings">Settings</string>
    <string name="review">review note</string>
    <string name="addnote">add note</string>
    <string name="speech_to_text">speech to text</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>


</resources>
