<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.afraaaldhaheri.ateducom.loginpage">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:padding="10dip">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="143dip"
            android:layout_marginStart="10dip"
            android:src="@drawable/logo" />

        <!--  email Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            tools:ignore="LabelFor" />
        <!--  password Label -->


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:inputType="textPassword"
            android:singleLine="true"
            tools:ignore="LabelFor,TextFields" />

        <!--  btn  -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dip"
            android:background="@color/bg_login"
            android:text="@string/login"
            android:textColor="@color/white" />

        <!--  text Label -->


        <Button
            android:id="@+id/btn_link_to_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dip"
            android:layout_marginTop="30dip"
            android:background="@color/bg_login"
            android:gravity="center"
            android:text="@string/new_register_here"
            android:textColor="@color/btn_login_bg"
            android:textSize="15sp"
            android:textStyle="normal"
            tools:textColor="@color/bg_register" />

    </LinearLayout>



</ScrollView>
